# sunflower-game-engine

./: .gitignore  CMakeLists.txt  README.md
include/application/core/: Application.h  ApplicationLayer.h
include/application/layers/engine/core/: Camera.h  Engine.h  EngineContext.h
include/application/layers/engine/ecs/components/: Meta.h  Transform.h
include/application/layers/engine/ecs/core/: ASystem.h  EntityManager.h  ILifeCycle.h
include/application/layers/engine/ecs/systems/: DummySystem.h  MovementSystem.h  ViewSystem.h
include/application/layers/engine/graphics/: IRenderer.h  RendererOpenGL.h  Texture.h
include/application/layers/engine/input/: EMouseButton.h  InputFactory.h  InputGLFW.h  InputInfo.h
include/application/layers/engine/time/: ATime.h  TimeFactory.h  TimeGLFW.h
include/application/layers/engine/window/: AWindow.h  EWindowBackend.h  WindowFactory.h  WindowGLFW.h  WindowSettings.h
include/engine/core/: AContextObject.h  Camera.h  Context.h  Engine.h  EngineContext.h  Time.h
include/engine/core/input/: AInput.h  EInputState.h  EKey.h  EMouseButton.h  InputFactory.h  InputGLFW.h  InputInfo.h  InputState.h  Key.h  MouseButton.h
include/engine/core/time/: TimeFactory.cpp  TimeFactory.h
include/engine/core/window/: AWindow.h  WindowFactory.h  WindowGLFW.h  WindowSettings.h
include/engine/ecs/components/: Position.h  Rotation.h  Scale.h  Transform.h  View.h
include/engine/ecs/core/: ASystem.h  ComponentSparseSet.h  ECSTypes.h  IComponentSparseSet.h  ISystem.h  Query.h  SystemManager.h  Universe.h  World.h
include/engine/ecs/systems/: ViewSystem.h
include/engine/graphics/: ERendererBackend.h  IRenderer.h  OpenGLCore.h  RendererFactory.h  RendererOpenGL.h  Shader.h  Texture.h
include/tiers/glad/: glad.h
include/utilities/containers/: SparseSet.h
include/utilities/patterns/state machine/: IState.h  ITransition.h  StateMachine.h  StateNode.h
include/utils/: SparseSet.h
ressources/shaders/fragment/: default2D.frag  rainbow.frag
ressources/shaders/vertex/: default2D.vert
src/: main.cpp
src/application/core/: Application.cpp  ApplicationLayer.cpp
src/application/layers/engine/core/: Camera.cpp  Engine.cpp
src/application/layers/engine/ecs/core/: ASystem.cpp  EntityManager.cpp  Query.cpp  SystemManager.cpp  Universe.cpp  World.cpp
src/application/layers/engine/ecs/systems/: DummySystem.cpp  MovementSystem.cpp  ViewSystem.cpp
src/application/layers/engine/graphics/: IRenderer.cpp  RendererOpenGL.cpp  Shader.cpp  Texture.cpp
src/application/layers/engine/input/: AInput.cpp  InputGLFW.cpp
src/application/layers/engine/time/: ATime.cpp  TimeFactory.cpp  TimeGLFW.cpp
src/application/layers/engine/window/: WindowGLFW.cpp
src/engine/core/: Camera.cpp  Engine.cpp  Time.cpp
src/engine/core/input/: AInput.cpp  InputGLFW.cpp
src/engine/core/time/: ATime.cpp  TimeGLFW.cpp
src/engine/core/window/: WindowGLFW.cpp
src/engine/ecs/core/: ASystem.cpp  EntityManager.cpp  Query.cpp  SystemManager.cpp  Universe.cpp  World.cpp
src/engine/ecs/systems/: DummySystem.cpp  DummySystem.h  MovementSystem.cpp  MovementSystem.h  SystemManager.cpp  ViewSystem.cpp
src/engine/graphics/: IRenderer.cpp  RendererOpenGL.cpp  Shader.cpp  Texture.cpp
src/tiers/glad/: glad.c
src/utilities/patterns/state machine/: IState.cpp  ITransition.cpp  StateMachine.cpp  StateNode.cpp
